fix: improved mobile nav/section background colour contrast and resolved project filters not sorting properly on some browsers

--- a/styles/sass/styles.scss
+++ b/styles/sass/styles.scss
@@ -33,7 +33,12 @@ body {
 
 // coloured section backgrounds
 #about, #contact {
-    background: $color1;
+    background: rgba($color1, 0.8);
+
+    // responsive to mobile
+    @media only screen and (max-width: $tablet) {
+        background: rgba($color1, 0.6);
+    }
 }
 
 // section padding
